--- a/style.css
+++ b/style.css
@@ -1,54 +1,108 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
-    padding: 0;
-    margin: 0;
-  }
-  .container {
-    display: flex !important;
-    gap: 2em;
-  }
-  .card {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2em;
-    position: relative;
-    overflow-y: auto;
-    padding: 20px;
-  }
+  background-color: #121212;
+  color: white;
+  font-family: arial;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+body h2 {
+  text-align: center;
+  padding: 10px;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+.search {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  box-shadow: 0 0 4px white;
+  padding: 15px 20px;
+  border-radius: 10px;
+  margin-right: 20px;
 
-  .innerCard {
-    font-size: medium;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #aeaeae;
-    transition: all 0.7s;
-    overflow: hidden;
-    color: #fff;
-    width: 100%;
-    height: 100px;
-    text-align: center;
-  }
-
-  .card .innerCard:hover {
-    box-shadow: 0 4px 8px #121212;
-    height: 260px;
-    background-color: #121212;
-  }
-  .card img {
-    width: 100%;
-    height: auto;
-    aspect-ratio: 16/9;
-  }
-  .nav{
-    width:100%;
-    height: 40px;
-    background-color: #aeaeae;
-    display: flex;
-    justify-content: space-between;
-  }
-  .nav button{
-    width: 10vmax;
-    height: 40px;
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 600;
-  }
+}
+.controls input {
+  outline: none;
+  border: none;
+  width: 300px;
+}
+.dropdown-menu {
+  width: 180px;
+  cursor: pointer;
+}
+.dropdown {
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  box-shadow: 0 0 4px white;
+  padding: 15px 20px;
+  border-radius: 10px;
+  background-color: #121212;
+}
+.drop-options {
+  display: none;
+  position: absolute;
+  width: 140px;
+  box-shadow: 0 0 4px white;
+  background-color: #121212;
+  padding: 7px 15px;
+  margin-top: 10px;
+  border-radius: 10px;
+  transition: .3s;
+}
+.drop-options p {
+  margin: 5px 0;
+}
+.show-options {
+  display: block;
+}
+.countries {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(280px, 1fr));
+  justify-items: center; 
+  max-width: 800px;
+  padding: 25px;
+}
+.country {
+  width: 280px;
+  min-height: 390px;
+  box-shadow: 0 0 4px white;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 20px;
+  background-color: #121212;
+  cursor: pointer;
+}
+.country-img {
+  margin: -5px;
+}
+.country-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-start-start-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.country-details {
+  justify-content: center;
+  padding: 10px;
+}
+.country-details h5 {
+  font-size: 20px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+.country-details strong {
+  margin-right: 5px;
+}
